--- a/stylesheets/fonts.sass
+++ b/stylesheets/fonts.sass
@@ -1,31 +1,17 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800)
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800")
 
-@font-face
-  font-family: 'liberator'
-  src: url('../fonts/liberator-webfont.eot')
-  src: url('../fonts/liberator-webfont.eot?#iefix') format('embedded-opentype')
-  src: url('../fonts/liberator-webfont.woff') format('woff')
-  src: url('../fonts/liberator-webfont.ttf') format('truetype')
-  src: url('../fonts/liberator-webfont.svg#liberatorregular') format('svg')
-  font-weight: normal
-  font-style: normal
+=font-face($font-family, $font-filename, $svg-extension, $font-weight : normal, $font-style :normal, $font-stretch : normal)
+  @font-face
+    font-family: "#{$font-family}"
+    src: url("/fonts/#{$font-filename}.eot")
+    src: url("/fonts/#{$font-filename}.eot?#iefix") format("embedded-opentype")
+    src: url("/fonts/#{$font-filename}.woff") format("woff")
+    src: url("/fonts/#{$font-filename}.ttf") format("truetype")
+    src: url("/fonts/#{$font-filename}.svg##{$svg-extension}") format("svg")
+    font-weight: $font-weight
+    font-style: $font-style
+    font-stretch: $font-stretch
 
-@font-face
-  font-family: 'haymaker'
-  src: url('../fonts/haymaker-webfont.eot')
-  src: url('../fonts/haymaker-webfont.eot?#iefix') format('embedded-opentype')
-  src: url('../fonts/haymaker-webfont.woff') format('woff')
-  src: url('../fonts/haymaker-webfont.ttf') format('truetype')
-  src: url('../fonts/haymaker-webfont.svg#haymakerregular') format('svg')
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'governor'
-  src: url('../fonts/governor-webfont.eot')
-  src: url('../fonts/governor-webfont.eot?#iefix') format('embedded-opentype')
-  src: url('../fonts/governor-webfont.woff') format('woff')
-  src: url('../fonts/governor-webfont.ttf') format('truetype')
-  src: url('../fonts/governor-webfont.svg#governorregular') format('svg')
-  font-weight: normal
-  font-style: normal
++font-face("Liberator", "liberator-webfont", "liberatorregular")
++font-face("Haymaker", "haymaker-webfont", "haymakerregular")
++font-face("Governor", "governor-webfont", "governorregular")
